# llms_for_dummies

./: 01_standard_attention.ipynb  README.md  pyproject.toml
attention/: flash_attention.ipynb  standard_attention.ipynb
positional_encoding/: sinusoidal.ipynb
src/: gpu_sim.py
src/llms_for_dummies/: gpu_sim.py  plots.py
tests/: test_gpu_sim.py
